--- a/thunar-sendto-clamtk.desktop
+++ b/thunar-sendto-clamtk.desktop
@@ -2,6 +2,7 @@
 [Desktop Entry]
 Name=ClamTk
 GenericName=Virus Scanner
+GenericName[af]=Virus Skandeerder
 GenericName[ar]=ماسح الفيروسات
 GenericName[ast]=Antivirus
 GenericName[az]=Virus axtarışı
@@ -12,9 +13,12 @@ GenericName[cs]=Antivirový program
 GenericName[da]=Virusscanneren
 GenericName[de]=Virensuche
 GenericName[el]=Ανιχνευτής ιών
+GenericName[en_AU]=Virus Scanner
 GenericName[en_CA]=Virus Scanner
 GenericName[en_GB]=Virus Scanner
+GenericName[eo]=Viruskontrolilo
 GenericName[es]=Analizador de Virus
+GenericName[eu]=Birus eskanerra
 GenericName[fi]=Virustorjuntasovellus
 GenericName[fo]=Virus skannari
 GenericName[fr]=Module de recherche et analyse de virus
@@ -33,6 +37,7 @@ GenericName[nb]=Virusskanner
 GenericName[nl]=Virusscanner
 GenericName[nl_BE]=Virusscanner
 GenericName[nn]=Virusskannar
+GenericName[pa]=ਵਿਸ਼ਾਣੂ ਖੋਜੀ"
 GenericName[pl]=Skaner wirusów
 GenericName[pt]=Verificador de vírus
 GenericName[pt_BR]=Antivírus Escaner
@@ -51,6 +56,7 @@ GenericName[uz]=Вирусларни текшириш
 GenericName[zh_CN]=病毒扫描工具
 GenericName[zh_TW]=病毒掃描程式
 Comment=Scan for threats...
+Comment[af]=Skandeer vir virusse...
 Comment[ar]=إمسح للكشف عن الفيروسات
 Comment[ast]=Buscar amenaces...
 Comment[az]=Təhlükə mövcudluğuna yoxla...
@@ -65,6 +71,7 @@ Comment[en_AU]=Scan for threats...
 Comment[en_CA]=Scan for threats...
 Comment[en_GB]=Scan for threats...
 Comment[es]=Analizar en busca de amenazas…
+Comment[eu]=Eskaneatu birusen bila...
 Comment[fi]=Tarkista uhkien varalta...
 Comment[fo]=Skanna eftir virus...
 Comment[fr]=Rechercher des menaces...
@@ -80,6 +87,7 @@ Comment[ms]=Imbas jika ada ancaman...
 Comment[nl]=Scannen op virussen…
 Comment[nb]=Skann etter virus...
 Comment[nn]=Skann...
+Comment[pa]=ਧਮਕਿਯਾੰ ਲਈ ਖੋਜ ਕਰੋ
 Comment[pl]=Przeskanuj pliki w poszukiwaniu wirusów...
 Comment[pt]=A analizar ameaças...
 Comment[pt_BR]=Verificar se há vírus...
