--- a/thunar-sendto-clamtk.desktop
+++ b/thunar-sendto-clamtk.desktop
@@ -1,4 +1,4 @@
-# thunar-sendto-clamtk 0.06
+# thunar-sendto-clamtk 0.07
 [Desktop Entry]
 Name=ClamTk
 GenericName=Virus Scanner
@@ -82,6 +82,7 @@ Comment[hu]=Vírusok keresése...
 Comment[id]=Pindai untuk ancaman...
 Comment[it]=Analizza per la ricerca di minacce...
 Comment[ja]=ウィルスをスキャンします...
+Comment[km]=វិភាគរកការគំរាមកំហៃង...
 Comment[ko]=위험 요소를 검사합니다...
 Comment[ms]=Imbas jika ada ancaman...
 Comment[nl]=Scannen op virussen…
@@ -98,6 +99,7 @@ Comment[sl]=Preglej za virusi...
 Comment[sr@latin]=Skeniranje pretnji...
 Comment[sv]=Skanna efter virus...
 Comment[te]=వైరస్సుల కోసం సంశోధిస్తున్నది...
+Comment[th]=สแกนภัยคุกคาม..
 Comment[tr]=Virüs taraması yap...
 Comment[ug]=ۋىرۇس تەكشۈر…
 Comment[uk]=Шукати загрози…
